{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 82,
  "lineage": "1441cbdb-4c70-8904-a925-1d5de6133113",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08308d81d0154ddc6",
            "domain": "vpc",
            "id": "eipalloc-0e29c53d576c6c5b0",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-066022a31ecb9aacb",
            "private_dns": "ip-10-0-4-199.ap-southeast-2.compute.internal",
            "private_ip": "10.0.4.199",
            "public_dns": "ec2-13-236-173-230.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.236.173.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elk-vpc-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "Name": "elk-vpc-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:047535751763:internet-gateway/igw-0fc5eee57e86f0e55",
            "id": "igw-0fc5eee57e86f0e55",
            "owner_id": "047535751763",
            "tags": {
              "Name": "elk-vpc",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "Name": "elk-vpc",
              "kubernetes.io/cluster/elk": "shared"
            },
            "vpc_id": "vpc-01c8f68ee5b157fd5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e29c53d576c6c5b0",
            "connectivity_type": "public",
            "id": "nat-05c511af6a5ee11b4",
            "network_interface_id": "eni-066022a31ecb9aacb",
            "private_ip": "10.0.4.199",
            "public_ip": "13.236.173.230",
            "subnet_id": "subnet-0b8bf91d7b7869542",
            "tags": {
              "Name": "elk-vpc-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "Name": "elk-vpc-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0007c99eb4941a4a81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05c511af6a5ee11b4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0007c99eb4941a4a8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fc5eee57e86f0e55",
            "id": "r-rtb-03ed466442ee6754b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ed466442ee6754b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:047535751763:route-table/rtb-0007c99eb4941a4a8",
            "id": "rtb-0007c99eb4941a4a8",
            "owner_id": "047535751763",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c511af6a5ee11b4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elk-vpc-private",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "Name": "elk-vpc-private",
              "kubernetes.io/cluster/elk": "shared"
            },
            "vpc_id": "vpc-01c8f68ee5b157fd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:047535751763:route-table/rtb-03ed466442ee6754b",
            "id": "rtb-03ed466442ee6754b",
            "owner_id": "047535751763",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc5eee57e86f0e55",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "elk-vpc-public",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "Name": "elk-vpc-public",
              "kubernetes.io/cluster/elk": "shared"
            },
            "vpc_id": "vpc-01c8f68ee5b157fd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c12fce32560fa804",
            "route_table_id": "rtb-0007c99eb4941a4a8",
            "subnet_id": "subnet-002ff795d924c432d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088088c525aff8a1e",
            "route_table_id": "rtb-0007c99eb4941a4a8",
            "subnet_id": "subnet-0a4026c1df10eb23d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e22f834c906e32cc",
            "route_table_id": "rtb-0007c99eb4941a4a8",
            "subnet_id": "subnet-08affad24d1aaf14b"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed8e0a55b2fc51d6",
            "route_table_id": "rtb-03ed466442ee6754b",
            "subnet_id": "subnet-0b8bf91d7b7869542"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1d52334f5e9d10c",
            "route_table_id": "rtb-03ed466442ee6754b",
            "subnet_id": "subnet-04341cc4639ef2e05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bf28166fa670d39",
            "route_table_id": "rtb-03ed466442ee6754b",
            "subnet_id": "subnet-03021d08dc6b57ee8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:047535751763:subnet/subnet-002ff795d924c432d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-002ff795d924c432d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047535751763",
            "tags": {
              "Name": "elk-vpc-private-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "elk-vpc-private-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01c8f68ee5b157fd5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:047535751763:subnet/subnet-0a4026c1df10eb23d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a4026c1df10eb23d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047535751763",
            "tags": {
              "Name": "elk-vpc-private-ap-southeast-2b",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "elk-vpc-private-ap-southeast-2b",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01c8f68ee5b157fd5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:047535751763:subnet/subnet-08affad24d1aaf14b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08affad24d1aaf14b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047535751763",
            "tags": {
              "Name": "elk-vpc-private-ap-southeast-2c",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "elk-vpc-private-ap-southeast-2c",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01c8f68ee5b157fd5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:047535751763:subnet/subnet-0b8bf91d7b7869542",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b8bf91d7b7869542",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047535751763",
            "tags": {
              "Name": "elk-vpc-public-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "elk-vpc-public-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01c8f68ee5b157fd5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:047535751763:subnet/subnet-04341cc4639ef2e05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-04341cc4639ef2e05",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047535751763",
            "tags": {
              "Name": "elk-vpc-public-ap-southeast-2b",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "elk-vpc-public-ap-southeast-2b",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01c8f68ee5b157fd5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:047535751763:subnet/subnet-03021d08dc6b57ee8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-03021d08dc6b57ee8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047535751763",
            "tags": {
              "Name": "elk-vpc-public-ap-southeast-2c",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "elk-vpc-public-ap-southeast-2c",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01c8f68ee5b157fd5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:047535751763:vpc/vpc-01c8f68ee5b157fd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0160d29612c127713",
            "default_route_table_id": "rtb-063d2a9968221388b",
            "default_security_group_id": "sg-0b317a9087dcdd67c",
            "dhcp_options_id": "dopt-012f8c276fc68f862",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01c8f68ee5b157fd5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-063d2a9968221388b",
            "owner_id": "047535751763",
            "tags": {
              "Name": "elk-vpc",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "Name": "elk-vpc",
              "kubernetes.io/cluster/elk": "shared"
            }
          }
        }
      ]
    }
  ]
}